<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>


    <string name="name">Farawe Taiwo</string>
    <string name="profile_picture">profile_picture</string>
    <string name="slack_username">\@Farawe</string>
    <string name="slack_user">Slack Username:</string>
    <string name="number">2347018796316</string>
    <string name="phone_number">Phone number:</string>
    <string name="email">farawehassan@yahoo.com</string>
    <string name="email_input">Email:</string>
    <string name="nigeria">Nigeria</string>
    <string name="country">Country:</string>
    <string name="android">Android</string>
    <string name="track">Track:</string>

</resources>
